[package]
name = "maphp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
reqwest = { version = "0.12.23", features = ["rustls-tls", "gzip", "zstd", "deflate", "brotli", "json", "stream", "blocking"] }
clap = { version = "4.5", features = [
    "default",
    "suggestions",
    "derive",
    "usage",
    "help",
    "color",
    "cargo",
    "env",
    "wrap_help",
] }
lazy_static = "1.5.0"
dunce = "1.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
tar = "0.4.44"
indicatif = { version = "0.18.0", features = ["tokio", "futures"] }
futures-util = "0.3.31"
tokio = { version = "1.47.1", features = [
    "full"
] }
dialoguer = { version = "0.12.0", features = ["fuzzy-matcher", "fuzzy-select"] }
serde_json = "1"
flate2 = { version = "1.1.2" }
bytes = "1.10.1"
num_cpus = "1.17.0"
colored = "3.0.0"