[package]
name = "maphp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bytes = "1.10.1"
clap = { version = "4.5", features = [
  "default",
  "cargo",
  "color",
  "derive",
  "env",
  "help",
  "suggestions",
  "usage",
  "wrap_help",
] }
colored = "3.0.0"
dialoguer = { version = "0.12.0", features = ["fuzzy-matcher", "fuzzy-select"] }
dunce = "1.0"
flate2 = { version = "1.1.2" }
futures-util = "0.3.31"
indicatif = { version = "0.18.0", features = ["futures", "tokio"] }
lazy_static = "1.5.0"
num_cpus = "1.17.0"
paste = "1.0.15"
reqwest = { version = "0.12.23", features = [
  "blocking",
  "brotli",
  "deflate",
  "gzip",
  "json",
  "rustls-tls",
  "stream",
  "zstd"
] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1"
tar = "0.4.44"
tokio = { version = "1.47.1", features = ["full"] }
